--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ main {
   overflow-y: scroll;
 }
 
-#theyMsg {
+.theyMsg {
   background-color: white;
   color: black;
   font-size: 16px;
@@ -117,7 +117,7 @@ main {
 }
 
 .message {
-  background-color: green;
+  background-color: #DCF8C6;
   color: black;
   font-size: 16px;
   border-radius: 30px;
@@ -125,6 +125,11 @@ main {
   width: 200px;
   margin: 20px 20px 0px 0px;
   float: right;
+  margin-left: 40%;
+}
+
+.holder {
+  width: 100%;
 }
 
 .foot {
