--- a/style.css
+++ b/style.css
@@ -124,8 +124,9 @@ main {
   padding: 20px;
   width: 200px;
   margin: 20px 20px 0px 0px;
-  float: right;
-  margin-left: 30%;
+  display: flex;
+  /* justify-content: flex-end; */
+  margin-left: 75%;
 }
 
 .holder {
