--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ main {
   width: 100%;
   height: 84%;
   overflow-y: scroll;
+  /* display: flex; */
 }
 
 .theyMsg {
@@ -114,6 +115,9 @@ main {
   padding: 20px;
   width: 200px;
   margin: 20px 0px 0px 20px;
+  /* display: flex; */
+  /* justify-content: flex-start; */
+  position: relative;
 }
 
 .message {
@@ -124,13 +128,15 @@ main {
   padding: 20px;
   width: 200px;
   margin: 20px 20px 0px 0px;
-  display: flex;
-  /* justify-content: flex-end; */
+  /* display: flex; */
+  /* justify-content: flex-start; */
   margin-left: 75%;
+  position: relative;
 }
 
 .holder {
   width: 100%;
+  height: auto;
 }
 
 .foot {
@@ -153,6 +159,8 @@ main {
   right: 10%;
   top: 40%;
 }
+
+
 
 
 
@@ -184,4 +192,24 @@ main {
 
 #template {
   display: none;
+}
+
+.chat {
+  display: none;
+}
+
+.eliminato {
+  display: none;
+  width: 170px;
+  height: 40px;
+  background-color: lightgray;
+  z-index: 10;
+  font-size: 18px;
+  position: absolute;
+  bottom: -70%;
+  left: 10px;
+}
+
+.active {
+  display: block;
 }
